liquibase init scripts and properties were added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,10 @@ management.security.enabled=false
 grpc.enableReflection=true
 grpc.enabled=true
 local.grpc.port=6565
+spring.datasource.url=@jdbc.url@
+spring.datasource.username=@jdbc.user@
+spring.datasource.password=@jdbc.password@
+spring.datasource.driver-class-name=@jdbc.driver@
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
